[package]
name = "injesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
awc = "2.0.3"
clap = "3.0.14"
form_urlencoded = "1.0.1"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4.38"
xz2 = "0.1.6"
regex = "1.5.4"
chrono = "0.4.19"
