[package]
name = "injesh"
version = "0.1.0"
edition = "2021"
authors = ["higuruchi <hfumiya2324@gmail.com>", "yassi-github <s19t312@kagawa-u.ac.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
form_urlencoded = "1.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4.38"
xz2 = "0.1.6"
regex = "1.5.4"
chrono = "0.4.19"
nix = "0.23.1"
httparse = "1.6.0"
libc = "0.2.132"
